[gd_scene load_steps=5 format=3 uid="uid://d0e2cc72nlueq"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_o61t1"]
[ext_resource type="Theme" uid="uid://bnulg8akvjth4" path="res://DarkTheme/Dark.theme" id="1_otsnw"]
[ext_resource type="PackedScene" uid="uid://q0icvxyovnsr" path="res://SettingsMenu.tscn" id="3_xy0ob"]

[ext_resource type="PackedScene" uid="uid://crwi3brrbj2mm" path="res://Menu/ControlsMenu.tscn" id="4_q22yb"]


[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_otsnw")
script = ExtResource("1_o61t1")

[node name="MainElements" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainElements"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="MainElements/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../RestartButton")
text = "Resume"

[node name="RestartButton" type="Button" parent="MainElements/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
text = "Restart"

[node name="SettingsButton" type="Button" parent="MainElements/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../RestartButton")
focus_neighbor_bottom = NodePath("../ControlsButton")
text = "Settings
"

[node name="ControlsButton" type="Button" parent="MainElements/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../ExitButton")
text = "View Controls"

[node name="ExitButton" type="Button" parent="MainElements/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Exit
"

[node name="SettingsMenu" parent="." instance=ExtResource("3_xy0ob")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ControlsMenu" parent="." instance=ExtResource("4_q22yb")]
unique_name_in_owner = true
visible = false
layout_mode = 1
